# thesis

./: .gitignore  .nojekyll  README.md  index.html  presentation.html  pyproject.toml
.github/workflows/: main.yml  publish.yml
notes/schur_complement/: main.tex
presentation_files/libs/bootstrap/: bootstrap.min.css
src/: visualize.py
src/constrained_dynamics/: fully_actuated.ipynb
src/mujoco/: README.md
src/mujoco/constrained_dynamics/: CMakeLists.txt  double_pendulum.xml  main.cpp
src/mujoco/constrained_manipulators/: CMakeLists.txt  Dockerfile  config.ini  docker_build.sh  docker_run.sh  main.cpp  urdf_manipulators.urdf
src/mujoco/constrained_manipulators/mjcf_manipulators/: manipulator_1.xml  manipulator_2.xml  mjcf_combined.xml  scene.xml
src/mujoco/udwadia_control/: CMakeLists.txt  Dockerfile  config.ini  docker_build.sh  docker_run.sh  main.cpp  mjcf_example.xml  scene.xml  urdf_example.urdf
src/mujoco/udwadia_control/z1/: scene.xml  z1.urdf  z1.xml  z1_gripper.urdf  z1_gripper.xml
src/mujoco/yumi_control/: CMakeLists.txt  config.ini  main.cpp  make_plots.py
src/mujoco/yumi_control/yumi/: scene.xml  yumi.urdf  yumi.xml
src/notebooks/: __init__.py
src/notebooks/constrained_dynamics/: under_actuated.ipynb
thesis/: README.md  ref.bib  thesis.tex
thesis/chapters/: abstract.tex  appex.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex
thesis_presentation/: presentation.html  presentation.qmd
thesis_presentation/styles/: inno_style.scss
