[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "My thesis"
authors = ["someilay <ismilioshyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "~1.25.2"
pandas = "~2.0.3"
jupyter = "~1.0.0"
matplotlib = "~3.7.2"
scipy = "~1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
